--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,70 +1,20 @@
 [project]
 name = "dreamydormouse"
 version = "0.1.0"
-description = "RAG system for querying Markdown files using RAG-Anything"
+description = "RAG system for querying Markdown files"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = ["raganything[text]>=0.1.0", "python-dotenv>=1.0.0"]
 
-[tool.ruff]
-preview = true
-
-[tool.ruff.lint]
-select = [
-  "A",
-  "AIR",
-  "ARG",
-  "ASYNC",
-  "ASYNC1",
-  "B",
-  "C",
-  "C4",
-  "C90",
-  "DJ",
-  "DTZ",
-  "E",
-  "EM",
-  "ERA",
-  "EXE",
-  "F",
-  "FA",
-  "FBT",
-  "FIX",
-  "FLY",
-  "G",
-  "I",
-  "ICN",
-  "INP",
-  "INT",
-  "ISC",
-  "LOG",
-  "N",
-  "NPY",
-  "PD",
-  "PIE",
-  "PL",
-  "PT",
-  "PTH",
-  "PYI",
-  "Q",
-  "R",
-  "RET",
-  "RSE",
-  "RUF",
-  "S",
-  "SIM",
-  "SLF",
-  "SLOT",
-  "T10",
-  "T20",
-  "TD",
-  "TID",
-  "TRY",
-  "UP",
-  "W",
-  "YTT",
+dependencies = [
+    "python-dotenv>=1.0.0",
+    "openai>=1.0.0",
+    # Use lightweight alternatives
+    "chromadb>=0.4.0",  # Vector database
+    "tiktoken>=0.5.0",   # Token counting
+    "pydantic>=2.0.0",   # Data validation
 ]
 
-[tool.pyright]
-venvPath = "."
-venv = ".venv"
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
