--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -10,6 +10,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    timeout-minutes: 45  # Add timeout to prevent hanging forever
 
     steps:
       - name: Checkout code
@@ -20,6 +21,7 @@ jobs:
 
       - name: Build Docker image
         uses: docker/build-push-action@v5
+        timeout-minutes: 40  # Add timeout for build step
         with:
           context: .
           file: ./Dockerfile
@@ -28,6 +30,13 @@ jobs:
           tags: dreamydormouse:test
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          # Add build progress output
+          outputs: type=docker
+
+      - name: Check image size
+        run: |
+          echo "Image size:"
+          docker images dreamydormouse:test --format "{{.Size}}"
 
       - name: Verify uv installation
         run: |
@@ -44,55 +53,8 @@ jobs:
           echo "Testing CLI help..."
           docker run --rm dreamydormouse:test
 
-      - name: Test with info command
-        run: |
-          echo "Testing info command..."
-          docker run --rm dreamydormouse:test info || true
-
       - name: List installed packages
         run: |
           echo "Listing installed packages..."
-          docker run --rm dreamydormouse:test python -m pip list
+          docker run --rm dreamydormouse:test python -m pip list | head -50
 
-  test:
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Build Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./Dockerfile
-          push: false
-          load: true
-          tags: dreamydormouse:test
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-      - name: Create test data directory
-        run: |
-          mkdir -p data
-          echo "# Test Document" > data/test.md
-          echo "This is a test." >> data/test.md
-
-      - name: Test process command with mock data
-        run: |
-          docker run --rm \
-            -v "$(pwd)/data:/app/data:ro" \
-            -v "$(pwd)/rag_storage:/app/rag_storage" \
-            dreamydormouse:test process /app/data || \
-            echo "Process command not yet implemented"
-
-      - name: Test query command
-        run: |
-          docker run --rm \
-            -v "$(pwd)/rag_storage:/app/rag_storage" \
-            dreamydormouse:test query "test query" || \
-            echo "Query command not yet implemented"
