--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,10 @@
 services:
   dreamydormouse:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    build: .
     container_name: dreamydormouse
     volumes:
-      # Persistent storage for RAG data
       - ./rag_storage:/app/rag_storage
-      # Output directory for parsed documents
       - ./output:/app/output
-      # Mount your markdown files here
       - ./data:/app/data:ro
     environment:
       - OPENAI_API_KEY=${OPENAI_API_KEY:-}
@@ -19,3 +14,4 @@ services:
       - EMBEDDING_DIM=${EMBEDDING_DIM:-3072}
     stdin_open: true
     tty: true
+
