--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,6 @@ description = "RAG system for querying Markdown files"
 readme = "README.md"
 requires-python = ">=3.12"
 
-# Simplified dependencies - let lightrag-hku pull what it needs
 dependencies = [
     "python-dotenv>=1.0.0",
     "lightrag-hku>=1.4.0",
@@ -15,4 +14,9 @@ dependencies = [
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+# Tell hatchling where to find the code
+[tool.hatch.build.targets.wheel]
+packages = ["."]
+only-include = ["main.py"]
 
